fix display bug on mobile

--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -158,6 +158,7 @@
 
     &__card{
         position: relative;
+        display: block;
         border-radius: 20px;
         box-shadow: 0.25rem 0.25rem 10px #e4e4e4;
         margin-bottom: 18px;
